# bender-bot

./: Cargo.toml
src/: main.rs  prelude.rs
src/commands/: mod.rs  pause_command.rs  ping.rs  ping_command.rs  play_command.rs  playing_command.rs  queue_command.rs  resume_command.rs  skip_command.rs
src/radio/: embeds.rs  handler.rs  mod.rs  player.rs
src/render/: mod.rs  track_info.rs
src/services/: youtube.rs
src/utils/: helpers.rs
templates/: track-info.html
