[package]
name = "bender-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = "1.0.171"
serde_json = "1.0.103"
lazy_static = "1.4.0"
rusty_ytdl = "0.6.2"
usvg = "0.35.0"
resvg = "0.35.0"
tiny-skia = "0.10"
fontdb = "0.14.1"
tera = "1.19.0"
base64 = "0.21.2"
chrono = "0.4.19"
reqwest = "0.11.18"
encoding_rs= "0.8.32"

[dependencies.phf]
version = "0.11.2"
default-features = false
features = ["macros"]

[dependencies.songbird]
version = "0.3.2"
features = ["yt-dlp"]

[dependencies.tokio]
version = "1.29.1"
features = ["rt-multi-thread", "macros"]
